--- a/package.json
+++ b/package.json
@@ -18,14 +18,12 @@
     "autoprefixer": "^10.2.6",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
-    "cssnano": "^5.0.6",
+    "esbuild-loader": "^2.13.1",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
     "postcss": "^8.3.5",
     "postcss-loader": "^6.1.1",
     "style-loader": "^3.0.0",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.3.5",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
