--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,22 +23,15 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Use cached files
-      - uses: actions/cache@v2
-        with:
-            path: "**/node_modules"
-            key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
-            
       # Install dependencies
       - name: Install 
         run: |
-          yarn install
+          pnpm install
 
       # Build the website
       - name: Build
         run: |
-          yarn install
-          yarn build
+          pnpm build
 
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v2.5.0
