--- a/package.json
+++ b/package.json
@@ -1,35 +1,20 @@
 {
-  "name": "personal-website",
-  "version": "1.0.0",
-  "description": "my personal website",
-  "repository": "https://github.com/hamzakhuswan/hamzakhuswan.github.io",
-  "author": "Hamza Khuswan",
-  "license": "",
-  "private": true,
-  "sideEffects": false,
+  "name": "personal-website-3v",
+  "version": "0.0.0",
   "scripts": {
-    "start": "webpack serve -c ./webpack.dev.js",
-    "build": "webpack -c ./webpack.prod.js"
+    "dev": "vite --host",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "devDependencies": {
-    "@types/three": "^0.130.0",
-    "@vue/preload-webpack-plugin": "^2.0.0",
-    "@yushijinhun/three-minifier-webpack": "^0.3.0",
-    "autoprefixer": "^10.2.6",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^5.2.6",
-    "esbuild-loader": "^2.13.1",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.1.0",
-    "postcss": "^8.3.5",
-    "postcss-loader": "^6.1.1",
-    "style-loader": "^3.0.0",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "@types/three": "^0.133.1",
+    "tailwindcss": "^2.2.17",
+    "typescript": "^4.4.4",
+    "vite": "^2.6.10"
   },
   "dependencies": {
-    "tailwindcss": "^2.2.4",
-    "three": "^0.130.1"
+    "autoprefixer": "^10.3.7",
+    "postcss": "^8.3.11",
+    "three": "^0.133.1"
   }
 }
