--- a/package.json
+++ b/package.json
@@ -1,20 +1,37 @@
 {
-  "name": "personal-website-3v",
-  "version": "0.0.0",
+  "name": "hamza-website",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "vite --host",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
-  },
-  "devDependencies": {
-    "@types/three": "^0.133.1",
-    "tailwindcss": "^2.2.17",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.10"
+    "dev": "next dev",
+    "build": "next build && next export",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.3.7",
-    "postcss": "^8.3.11",
-    "three": "^0.133.1"
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/font": "13.1.6",
+    "@next/mdx": "^13.1.6",
+    "@radix-ui/react-scroll-area": "^1.0.2",
+    "@react-three/drei": "^9.56.24",
+    "@react-three/fiber": "^8.11.0",
+    "@types/luxon": "^3.2.0",
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.10",
+    "@types/three": "^0.149.0",
+    "clsx": "^1.2.1",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "luxon": "^3.2.1",
+    "next": "13.1.6",
+    "phosphor-react": "^1.4.1",
+    "react": "18.2.0",
+    "react-access-hooks": "^1.0.1",
+    "react-dom": "18.2.0",
+    "react-ga4": "^2.0.0",
+    "three": "^0.149.0",
+    "typescript": "4.9.5"
   }
 }
