--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "run-deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
@@ -33,5 +34,8 @@
     "react-ga4": "^2.0.0",
     "three": "^0.149.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
